--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,10 +3,10 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
-	"runArgs": [
-    "--env-file",
-    ".env"
-  ],
+	//"runArgs": [
+    //"--env-file",
+    //".env"
+  //],
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {
 			"installZsh": "true",
@@ -19,7 +19,14 @@
 		"ghcr.io/devcontainers/features/git:1": {
             "version": "latest",
             "ppa": "false"
-        }
+        },
+		"ghcr.io/itsmechlark/features/postgresql":  {
+			"version": "latest",
+			"port": 5432,
+			"username": "otg",
+			"password": "otg",
+			"database": "fresh_flow_db"
+		}
 	},
 
 	// Configure tool-specific properties.
@@ -34,14 +41,19 @@
 		}
 	},
 	"containerEnv": {
-		"NODE_ENV": "development"		
+		"NODE_ENV": "development"	,
+		"DB_HOST": "127.0.0.1",
+		"DB_USER": "postgres",
+		"DB_PASSWORD": "otg",
+		"DB_NAME": "fresh_flow_db",
+		"DB_PORT": "5432"	
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+	"postCreateCommand": "sudo service postgresql start && bash ./init-db.sh",
 
 	// Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node"
