--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,6 +8,8 @@
     "express-ejs-layouts": "^2.5.1",
     "html5-qrcode": "^2.3.8",
     "qrcode": "^1.5.4",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "express-session": "^1.18.1",
+    "node-fetch": "^3.3.2"
   }
 }
