--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,10 @@
     "qrcode": "^1.5.4",
     "sqlite3": "^5.1.7",
     "express-session": "^1.18.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^2.6.9"
+  },
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   }
 }
